--- a/Feature_Extraction/Feature Extractor.ipynb
+++ b/Feature_Extraction/Feature Extractor.ipynb
@@ -62,7 +62,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -93,7 +93,7 @@
         "import librosa.display\n",
         "import IPython.display as ipd"
       ],
-      "execution_count": 90,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -146,7 +146,7 @@
         "\n",
         "num_mels_global = 100"
       ],
-      "execution_count": 97,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -166,7 +166,7 @@
         "    file_names = output.split('\\n')[:-1]\n",
         "    return file_names"
       ],
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -205,7 +205,7 @@
         "\n",
         "    return sample_list"
       ],
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -220,7 +220,7 @@
         "      return True\r\n",
         "  return False"
       ],
-      "execution_count": 86,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -251,7 +251,7 @@
         "    return ret_train_list, ret_test_list\n",
         "  "
       ],
-      "execution_count": 102,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -270,7 +270,7 @@
         "        \n",
         "    return spec_list"
       ],
-      "execution_count": 103,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -287,7 +287,7 @@
         "    \n",
         "    print('Done saving all images in {}'.format(name))"
       ],
-      "execution_count": 105,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -307,11 +307,12 @@
         "        spec_list_train = seg_list_to_spec_list(seg_list_train, num_mels_global, FS_global)\n",
         "        spec_list_test = seg_list_to_spec_list(seg_list_test, num_mels_global, FS_global)\n",
         "        print('Finished Computing Mel-Spectrograms for {}'.format(folders[i]))\n",
+        "        \n",
         "        dump_spec_list_to_folder(spec_list_train, folders[i], path='drive/MyDrive/Third Year/ECE324/Mickey Mouse AI Club/04 Datasets/dataset_v02/train/')\n",
-        "        dump_spec_list_to_folder(spec_list_train, folders[i], path='drive/MyDrive/Third Year/ECE324/Mickey Mouse AI Club/04 Datasets/dataset_v02/test/')\n",
+        "        dump_spec_list_to_folder(spec_list_test, folders[i], path='drive/MyDrive/Third Year/ECE324/Mickey Mouse AI Club/04 Datasets/dataset_v02/test/')\n",
         "        print(\"\")"
       ],
-      "execution_count": 124,
+      "execution_count": 143,
       "outputs": []
     },
     {
@@ -321,18 +322,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3sHhxrfjKHcz",
-        "outputId": "fddaecf2-6ce2-459b-84b8-3a8a3ae3de19"
+        "outputId": "6b5f427b-f174-431b-ef8f-85002175a3d5"
       },
       "source": [
         "main()"
       ],
-      "execution_count": 125,
+      "execution_count": 146,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "The selected participants in the test set are:\n",
-            "['Spencer Teetaert.wav', 'Kathryn Carnaffan.wav', 'Shayla Martin-Fenn.wav', 'Alice Zhou.wav', 'Aman Bhargava.wav', 'Brian C.wav']\n",
+            "['Alice Zhou.wav', 'Aidan Bowers.wav', 'Adam Carnaffan.wav', 'Alice Zhou(1).wav', 'David Carnaffan.wav', 'Andre Fu.wav']\n",
             "Starting Circle_Scratches...\n",
             "Finished Segmenting Circle_Scratches...\n",
             "Finished Computing Mel-Spectrograms for Circle_Scratches\n",
